<resources>

    <string name="mobileNumber">Mobile Number</string>
    <string name="imageContent">image</string>
    <string name="Password">Password</string>
    <string name="passcode">Passcode</string>
    <string name="processing">PROCESSING</string>
    <string name="login">Login</string>
    <string name="loadingHint">Kindly <b>DO NOT</b> close or \n click back button</string>
    <string name="OTPBanner">Sit back &amp; Relax! while we verify your \n account</string>
    <string name="OtpToast">( Enter the OTP below in case if we fail to detect the \n SMS automatically )</string>
    <string name="amountToBePaid">Amount to be pay</string>
    <string name="totalAmountToBePaid">Total amount to be paid</string>
    <string name="selectAnOption">SELECT AN OPTION TO PAY</string>
    <string name="paymentDetails">PAYMENT DETAILS</string>
    <string name="payWithWallet">Pay with wallet</string>
    <string name="payWithCard">Pay with card</string>
    <string name="pay">Pay</string>
    <string name="orderAmount">Order Amount : </string>
    <string name="orderAmount1">Order Amount</string>
    <string name="rPayFee">RPay Fee : </string>
    <string name="totalAmount">Total Amount : </string>
    <string name="EnterPin">Enter 4-Digit Security Pin</string>
    <string name="SecureAccess">Security Pin will help your account secure from unauthorized access. Do not share this PIN with anyone.</string>
    <string name="logoutHint">Logout this account?</string>
    <string name="logout">Logout</string>
    <string name="clickHere">Click here</string>

</resources>